--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title> Index </title>
 </head>
 <body>
-    <a href="index.html"> <b> Index </b> </a>  &nbsp; &nbsp; &nbsp;&nbsp;
+    <a href="index.html"> <b> Index </b> </a>  &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
     <a href="home.html"> <b> Home </b> </a>   &nbsp; &nbsp; &nbsp;&nbsp;
     <a href="class.html"> <b> class </b></a>  &nbsp; &nbsp; &nbsp;&nbsp;
     
