--- a/pfile.html
+++ b/pfile.html
@@ -81,6 +81,11 @@
        <b> Enter Number: </b>  <input type="number" placeholder="Ph no" required> <br> <br>
         <b> Enter Password:  </b> <input type="password" placeholder="Password" required> <br> <br>
        <b> Enter email: </b>  <input type="email" placeholder="email" required> <br> <br>
+       <b> Gender: </b> <input type="radio"name="gender"> Male 
+         <input type="radio" name="gender"> Female 
+         <input type="radio"name="gender"> Others <br> <br>
+         <input type="checkbox"> I accept all the terms and conditions <br> <br>
+
         <input type="submit" value="login">
 
             </form>
