--- a/text.html
+++ b/text.html
@@ -16,7 +16,7 @@
          </b></a> <br> <br> <br>  
         
     <video src="15111800-hd_1920_1080_50fps.mp4" width="100%" height="50%"  controls muted autoplay></video>
-    <h1> Nested list </h1>
+    <h1> <i>Nested list </i> </h1>
     <ul> 
         <li> Main Item 1
             <ol>
