--- a/pfile.html
+++ b/pfile.html
@@ -67,13 +67,13 @@
      </ol>
      <h1> Following is the number of days in a week </h1>
      <ul> 
-        <li> Sunday </li>
-        <li> Monday </li>
-        <li> Tuesday </li>
-        <li> Wednesday </li>
-        <li> Thursday </li>
-        <li> Friday </li>
-        <li> Saturday </li>
+        <li><i> Sunday </i></li>
+        <li><i> Monday </i></li>
+        <li><i> Tuesday </i></li>
+        <li><i> Wednesday </i></li>
+        <li><i> Thursday </i></li>
+        <li><i> Friday </i></li>
+        <li><i> Saturday </i></li>
      </ul>
      <h1> Fill the form below: </h1>
       <form >
