--- a/l.html
+++ b/l.html
@@ -13,6 +13,14 @@
         <li><a href="">About</a></li>
         <li><a href="">Contact Us</a></li>
     </ul>
+<div id="mainid"> 
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+    <div class="box"></div>
+</div>
     
 </body>
 </html>
