--- a/l.html
+++ b/l.html
@@ -13,13 +13,18 @@
         <li><a href="">About</a></li>
         <li><a href="">Contact Us</a></li>
     </ul>
-<div id="mainid"> 
+<!-- <div id="mainid"> 
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
     <div class="box"></div>
+    
+     -->
+    <div id="circle">
+
+    </div>
 </div>
     
 </body>
